# paket

./: .gitignore  Cargo.toml  README.md  style.css
paket-android/: settings.gradle
paket-android/app/: build.gradle
paket-android/app/src/androidTest/java/paket/paket/: ExampleInstrumentedTest.kt
paket-android/app/src/main/: AndroidManifest.xml
paket-android/app/src/main/java/paket/paket/: MainActivity.kt  ShareActivity.kt
paket-android/app/src/main/java/paket/paket/ui/theme/: Color.kt  Theme.kt  Type.kt
paket-android/app/src/main/res/values/: strings.xml  themes.xml
paket-android/app/src/test/java/paket/paket/: ExampleUnitTest.kt
paket-android/gradle/: libs.versions.toml
paket-android/gradle/wrapper/: gradle-wrapper.properties
paket-firefox/: README.md  background.js  build.sh  manifest.json  paket.xpi  popup.html  popup.js
src/: html.rs  http.rs  main.rs  rss.rs
